--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <div class="heart"></div>
+
+    <audio autoplay>
+        <source src="Sorryna.mp3">
+    </audio>
 </body>
+
 </html>
