--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <div class="heart"></div>
 
-    <audio autoplay>
+    <audio controls>
         <source src="Sorryna.mp3">
     </audio>
 </body>
 
 </html>
+
