--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <div class="heart"></div>
 
-    <audio controls>
-        <source src="Sorryna.mp3">
-    </audio>
+  <audio controls>
+  <source src="sounds/Sorryna.mp3" type="audio/mpeg">
+</audio>
 </body>
 
 </html>
+
 
