--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <div class="heart"></div>
 
   <audio controls>
-  <source src="sounds/Sorryna.mp3" type="audio/mpeg">
+  <source src="Sorryna.mp3" type="audio/mpeg">
 </audio>
 </body>
 
 </html>
+
 
 
