pushing all the code

--- a/index.html
+++ b/index.html
@@ -3,18 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+    
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="script/script.js" defer></script>
     <title>suyo</title>
 </head>
 <body>
+
+    <div class="container">
+    <img src="img/yie.gif" alt="gif" height="150">
+    </div>
+
+    <div class="container2">
+    <img src="img/yie.gif" alt="gif" height="150">
+    </div>
+
+    <div class="container3">
+    <img src="img/yie.gif" alt="gif" height="150">
+    </div>
+    <div class="container4">
+    <img src="img/yie.gif" alt="gif" height="150">
+    </div>
+
+    
     <div class="heart"></div>
 
-  <audio controls>
-  <source src="Sorryna.mp3" type="audio/mpeg">
-</audio>
-</body>
+    <!-- <button id="rain-btn" style="position:fixed;top:20px;right:20px;z-index:10000;">Heart Rain</button> -->
+    <audio autoplay>
+        <source src="sound/namimiss.mp3" type="audio/mpeg">
+    </audio>
 
+
+</body>
 </html>
+
 
 
 
