--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="heart"></div>
 
     <!-- <button id="rain-btn" style="position:fixed;top:20px;right:20px;z-index:10000;">Heart Rain</button> -->
-    <audio autoplay>
+    <audio autoplay loop>
         <source src="sound/namimiss.mp3" type="audio/mpeg">
     </audio>
 
